--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>DGI Supply Mobile - Shopping Cart</title>
-    <link rel="stylesheet" href="styles/index.processed.css">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
@@ -25,6 +25,6 @@
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
-  <script src="scripts/index.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
