added tabs html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>DGI Supply Mobile - Shopping Cart</title>
+  <title>DGI Supply</title>
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -22,6 +22,25 @@
       </ul>
     </nav>
       
+    <div class="tabs">
+      <div class="tab cat">
+        <p>Category</p>
+      </div>
+      <ul class="cat contents">
+        <li>Abrasives</li>
+        <li>Band Sawing Products</li>
+        <li>Cutting Tools</li>
+       </ul>
+      <div class="tab mfg">
+        <p>Manufacturer</p>
+      </div>
+      <ul class="mfg contents">
+        <li>3M</li>
+        <li>DeWalt</li>
+        <li>Milwaukee Tool</li>
+     </ul>
+    </div>
+  </div>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
