Updated html, css, and js

--- a/index.html
+++ b/index.html
@@ -23,22 +23,27 @@
     </nav>
       
     <div class="tabs">
-      <div class="tab cat">
-        <p>Category</p>
-      </div>
+
+      <div class="tab cat selected">
+        <a href="#category">Category</a>
+
       <ul class="cat contents">
         <li>Abrasives</li>
         <li>Band Sawing Products</li>
         <li>Cutting Tools</li>
        </ul>
-      <div class="tab mfg">
-        <p>Manufacturer</p>
       </div>
+
+      <div class="tab mfg">
+        <a href="#manufacturer">Manufacturer</a>
+      
       <ul class="mfg contents">
         <li>3M</li>
         <li>DeWalt</li>
         <li>Milwaukee Tool</li>
      </ul>
+    </div>
+
     </div>
   </div>
   </div>
